// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none cursor-pointer focus:outline-none"
    >
      <div
        class="sc-AxirZ eEbZjj"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a large one 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none cursor-pointer focus:outline-none"
    >
      <div
        class="sc-AxirZ bMjbpr"
        height="30"
        width="30"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a small one 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none cursor-pointer focus:outline-none"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render toggle icon 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none cursor-pointer focus:outline-none"
    >
      <div
        class="sc-AxirZ eEbZjj"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as function 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div>
      Dropdown is open: 
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as react element 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div>
      custom toggle
    </div>
  </div>
</div>
`;

exports[`Dropdown should render with options 1`] = `
<div>
  <div
    class="relative"
    data-testid="dropdown__toggle"
  >
    <div
      class="float-right outline-none cursor-pointer focus:outline-none"
    >
      <div
        class="sc-AxirZ eEbZjj"
        height="20"
        width="20"
      >
        <svg>
          settings.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
